--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <header>
         <h1 id="title_name">Andrew Aydelott</h1>
     </header>
-    <header id="navigation">
+    <header id="title_nav">
         <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="travel.html">Travel</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="travel.html">Contact</a></li>
+            <li><a href="resources.html">Resources</a></li>
         </ul>
     </nav>
     </header>
