--- a/index.html
+++ b/index.html
@@ -8,30 +8,9 @@
     </head>
     <body>
     <header>
-        <h1 id="title_name">Andrew Aydelott</h1>
-    </header>
-    <header id="title_nav">
-        <nav>
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="travel.html">Contact</a></li>
-            <li><a href="resources.html">Resources</a></li>
-        </ul>
-    </nav>
+        <h1 id="title_name">Legacy Listings</h1>
     </header>
     <main>
-      <section id="about_me">
-        <h2>Welcome</h2>
-        <p>My name is Andrew Aydelott and I had two dreams for what I wanted to do 
-            when I grew up.  The first was to work for the FBI.  The second was to become an archaeologist.
-             After 20 years with the FBI, I have decided to take an early retirement
-             and pursue my second career as an archaeologist to fulfill both childhood
-             goals. I will be graduating from El Camino
-             College with an anthropology degree at the end of the 2024 fall semester.
-             After graduation, I plan on transferring to Cal State University Long Beach to earn my bachelor's degree.
-         </p>
-    </section>
     </main>
     <aside>
         <section id="free_time">
@@ -47,11 +26,15 @@
          </p>
         </section>
     </aside>
-    <footer>
-            <address>
-                <a href="mailto:Andrew_Aydelott@elcamino.edu">Send me an email</a>
-            </address>
-            <p>Last updated on October 1<sup>st</sup>, 2024.</p>     
+    <footer id="footer_nav">
+        <nav>
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="travel.html">Contact</a></li>
+            <li><a href="resources.html">Resources</a></li>
+        </ul>
+    </nav>
     </footer>
     </body>
 </html>
