--- a/index.html
+++ b/index.html
@@ -11,21 +11,8 @@
         <h1 id="title_name">Legacy Listings</h1>
     </header>
     <main>
+        <p>Legacy Listings</p>
     </main>
-    <aside>
-        <section id="free_time">
-         <h2>When I have free time</h2>
-        <ol>
-            <li>I plan travel excursions to see as much of the world as possible.</li>
-            <li>I read as much as I can.  <em>The Count of Monte Cristo</em>, by Alexandre
-            Dumas, is my favorite book of all time.</li>
-            <li>I create campaigns for my bar trivia turned Dungeons and Dragons group.</li>
-         </ol>
-        <br>
-         <p>My favorite website is <a href="https://www.atlasobscura.com/">Atlas Obscura</a> for it's unique travel recommendations.
-         </p>
-        </section>
-    </aside>
     <footer id="footer_nav">
         <nav>
         <ul>
