--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     </head>
     <body>
     <header>
-        <h1 id="title_name">Legacy Listings</h1>
     </header>
     <main>
-        <p>Legacy Listings</p>
+        <div class="butler-background">
+            <h1>Legacy Listings</h1>
+        </div>
     </main>
     <footer id="footer_nav">
         <nav>
