--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     </head>
     <body>
     <header>
+        <h1>Legacy Listings</h1>
     </header>
     <main>
         <div class="butler-background">
-            <h1>Legacy Listings</h1>
+        <h3>Cataloguing One's Past to Protect Their Future</h3>
         </div>
     </main>
     <footer id="footer_nav">
