--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <footer id="footer_nav">
         <nav>
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="travel.html">Contact</a></li>
-            <li><a href="resources.html">Resources</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Resources</a></li>
         </ul>
     </nav>
     </footer>
