--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resources.html">Resources</a></li>
         </ul>
     </nav>
     </footer>
