--- a/resources.html
+++ b/resources.html
@@ -4,26 +4,27 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
-        <title>Andrew Aydelott Project 2</title>
+        <title>AAydelott Project 2 Contact</title>
     </head>
     <body>
     <header>
         <h1>Legacy Listings</h1>
     </header>
-    <main>
-        <div class="butler-background">
-        <h3>Cataloguing One's Past to Protect Their Future</h3>
-        </div>
-    </main>
-    <footer id="footer_nav">
+    <aside id="sidebarA">
         <nav>
-        <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="resources.html">Resources</a></li>
-        </ul>
-    </nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Resources</a></li>
+            </ul>
+        </nav>  
+    </aside>
+    <main>
+    </main>
+    <footer>     
+        <p>The Terms and Conditions will be located here</p>   
     </footer>
     </body>
 </html>
