--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
-        <title>AAydelott Project 2 Contact</title>
+        <title>AAydelott Project 2 Images</title>
     </head>
     <body>
     <header>
