--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Resources</a></li>
             </ul>
@@ -32,6 +32,7 @@
             <label for="comments">Comments:</label>
             <textarea id="comments" placeholder="If you have any comments, please enter them here."></textarea><br>
             <input type="submit">
+            <input type="reset">
             </fieldset>
         </form>
     </main>
