--- a/about.html
+++ b/about.html
@@ -21,13 +21,12 @@
                 </ul>
             </nav>  
         </aside>
-</head>
 <main>
 <h2>About Our Process</h2>
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="precious.jpg">
-      <img src="precious.jpg" alt="precious hands" width="100px" height="100px">
+      <img src="precious.jpg" alt="precious hands" width="100" height="100">
     </a>
     <div class="desc">White glove service while packing your valuables</div>
   </div>
@@ -36,7 +35,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="warehouse.jpg">
-      <img src="warehouse.jpg" alt="Warehouse Management" width="100px" height="100px">
+      <img src="warehouse.jpg" alt="Warehouse Management" width="100" height="100">
     </a>
     <div class="desc">No project is too big for us to handle</div>
   </div>
@@ -45,7 +44,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="documentation.jpg">
-      <img src="documentation.jpg" alt="Documentation" width="100px" height="100px">
+      <img src="documentation.jpg" alt="Documentation" width="100" height="100">
     </a>
     <div class="desc">Each step will be carefully documented to provide a complete inventory</div>
   </div>
@@ -54,7 +53,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="tomorrow.jpg">
-      <img src="tomorrow.jpg" alt="Protected Legacy" width="100px" height="100px">
+      <img src="tomorrow.jpg" alt="Protected Legacy" width="100" height="100">
     </a>
     <div class="desc">To ensure your legacy is protected for generations</div>
   </div>
