--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Resources</a></li>
+            <li><a href="resources.html">Resources</a></li>
         </ul>
     </nav>
     </footer>
