--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="main.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>     
         <title>AAydelott Project 2 About Us</title>
     </head>
     <body>
@@ -17,7 +19,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#">Resources</a></li>
+                    <li><a href="resources.html">Resources</a></li>
                 </ul>
             </nav>  
         </aside>
