--- a/resources.html
+++ b/resources.html
@@ -19,7 +19,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Resources</a></li>
+                <li><a href="resources.html">Resources</a></li>
             </ul>
         </nav>  
     </aside>
