--- a/resources.html
+++ b/resources.html
@@ -61,7 +61,8 @@
         <strong>Rely on crowdfunding to protect a legacy with GoFundMe.</strong> Sometimes even our best plans do nto work out as we would like and additional funds may be needed. GoFundMe provides crowdfunding to help secure your family's legacy.
       </div>
     </div>
-  </div>    </main>
+  </div>    
+    </main>
     <footer>     
         <p>The Terms and Conditions will be located here</p>   
     </footer>
