--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>TeleCalm helps provide secure communication for loved ones with dementia.</strong> y</code>, Easily control the phone numbers which can be received and dialed to ensure your family is safe.
+        <strong>TeleCalm helps provide secure communication for loved ones with dementia.</strong> Easily control the phone numbers which can be received and dialed to ensure your family is safe.
       </div>
     </div>
   </div>
