--- a/about.html
+++ b/about.html
@@ -61,11 +61,29 @@
     <div class="desc">To ensure your legacy is protected for generations</div>
   </div>
 </div>
-
 <div class="clearfix"></div>
-
 <div style="padding:6px;">
 </div>
+<div class="card mb-3">
+  <img src="precious.jpg" class="card-img-top" alt="precious hands">
+  <div class="card-body">
+    <h5 class="card-title">White Glove Service</h5>
+    <p class="card-text">We treat each of your items as if they are the most valued assets you own.</p>
+  </div>
+</div>
+    <div class="card mb-3">
+  <img src="warehouse.jpg" class="card-img-top" alt="Warehouse Management">
+  <div class="card-body">
+    <h5 class="card-title">Warehouse Management</h5>
+    <p class="card-text">No assignment is too large as we catalogue all your most precious treasures.</p>
+  </div>
+</div>
+      <div class="card mb-3">
+  <img src="documentation.jpg" class="card-img-top" alt="documentation">
+  <div class="card-body">
+    <h5 class="card-title">Warehouse Management</h5>
+    <p class="card-text">Each step of the process will be carefully catalogued to provide the most complete inventory possible..</p>
+  </div>
 </main>
 <footer>     
     <p>The Terms and Conditions will be located here</p>   
