--- a/about.html
+++ b/about.html
@@ -64,21 +64,21 @@
 <div class="clearfix"></div>
 <div style="padding:6px;">
 </div>
-<div class="card mb-3">
+<div class="card-group">
   <img src="precious.jpg" class="card-img-top" alt="precious hands">
   <div class="card-body">
     <h5 class="card-title">White Glove Service</h5>
     <p class="card-text">We treat each of your items as if they are the most valued assets you own.</p>
   </div>
 </div>
-    <div class="card mb-3">
+    <div class="card-group">
   <img src="warehouse.jpg" class="card-img-top" alt="Warehouse Management">
   <div class="card-body">
     <h5 class="card-title">Warehouse Management</h5>
     <p class="card-text">No assignment is too large as we catalogue all your most precious treasures.</p>
   </div>
 </div>
-      <div class="card mb-3">
+      <div class="card-group">
   <img src="documentation.jpg" class="card-img-top" alt="documentation">
   <div class="card-body">
     <h5 class="card-title">Warehouse Management</h5>
