--- a/resources.html
+++ b/resources.html
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="resources.html">Resources</a></li>
             </ul>
