--- a/about.html
+++ b/about.html
@@ -43,7 +43,6 @@
     <div class="desc">No project is too big for us to handle</div>
   </div>
 </div>
-
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="documentation.jpg">
@@ -52,7 +51,6 @@
     <div class="desc">Each step will be carefully documented to provide a complete inventory</div>
   </div>
 </div>
-
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="tomorrow.jpg">
@@ -84,6 +82,7 @@
     <h5 class="card-title">Warehouse Management</h5>
     <p class="card-text">Each step of the process will be carefully catalogued to provide the most complete inventory possible..</p>
   </div>
+      </div>
 </main>
 <footer>     
     <p>The Terms and Conditions will be located here</p>   
