--- a/about.html
+++ b/about.html
@@ -62,14 +62,7 @@
 <div class="clearfix"></div>
 <div style="padding:6px;">
 </div>
-    <div class="container">
-  <div class="row row-cols-2">
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-  </div>
-</div><div class="card-group">
+    <div class="card-group">
   <img src="precious.jpg" class="card-img-top" alt="precious hands">
   <div class="card-body">
     <h5 class="card-title">White Glove Service</h5>
