--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
         <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="resources.html">Resources</a></li>
         </ul>
