--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="resources.html">Resources</a></li>
                 </ul>
@@ -62,27 +62,6 @@
 <div class="clearfix"></div>
 <div style="padding:6px;">
 </div>
-    <div class="card-group">
-  <img src="precious.jpg" class="card-img-top" alt="precious hands">
-  <div class="card-body">
-    <h5 class="card-title">White Glove Service</h5>
-    <p class="card-text">We treat each of your items as if they are the most valued assets you own.</p>
-  </div>
-</div>
-    <div class="card-group">
-  <img src="warehouse.jpg" class="card-img-top" alt="Warehouse Management">
-  <div class="card-body">
-    <h5 class="card-title">Warehouse Management</h5>
-    <p class="card-text">No assignment is too large as we catalogue all your most precious treasures.</p>
-  </div>
-</div>
-      <div class="card-group">
-  <img src="documentation.jpg" class="card-img-top" alt="documentation">
-  <div class="card-body">
-    <h5 class="card-title">Warehouse Management</h5>
-    <p class="card-text">Each step of the process will be carefully catalogued to provide the most complete inventory possible..</p>
-  </div>
-      </div>
 </main>
 <footer>     
     <p>The Terms and Conditions will be located here</p>   
