--- a/services.html
+++ b/services.html
@@ -25,6 +25,7 @@
 <main>
 <article>
   <h2>The Level of Service We Provide</h2>
+    <img src="ButlerArchaeologist.jpg" alt="Butler and Archaeologist" width="260">
   <p>We, at Legacy Listings, will take the time to understand our customers to ensure they are always happy with the level of care we provide.</p>
   <p>After a 30 minute consultation, we will begin to prep a clean and safe work environment to help catalogue assets as: keep, sell, and donate.  You, or your loved one, will be able to review every step of the process.  If mobility is an issue, then we can offer a tablet so the process can be watched through our streaming video service.</p>
   <p>Our catalogers will don white gloves, booties, and safety glasses to make sure every piece is safely handled.  They then will provide before and after photos of every box and contents that will be reviewed for processing.</p>
