--- a/resources.html
+++ b/resources.html
@@ -58,7 +58,7 @@
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>Rely on crowdfunding to protect a legacy with GoFundMe.</strong> Sometimes even our best plans do nto work out as we would like and additional funds may be needed. GoFundMe provides crowdfunding to help secure your family's legacy.
+        <strong>Rely on crowdfunding to protect a legacy with GoFundMe.</strong> Sometimes even our best plans do not work out as we would like and additional funds may be needed. GoFundMe provides crowdfunding to help secure your family's legacy.
       </div>
     </div>
   </div> 
